# firmware

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  prj.conf  readme.md  ubx_bmd300eval_nrf52832.overlay
boards/arm/sml_tegsensev2_nrf52832/: Kconfig.board  Kconfig.defconfig  board.cmake  sml_tegsensev2_nrf52832-pinctrl.dtsi  sml_tegsensev2_nrf52832.dts  sml_tegsensev2_nrf52832.yaml  sml_tegsensev2_nrf52832_defconfig
drivers/sensor/max3010x/: CMakeLists.txt  Kconfig  max3010x.c  max3010x.h
dts/bindings/sensor/: maxim,max3010x.yaml
src/: MAX30101.cpp  MAX30101.hpp  ble.cpp  ble.hpp  command.cpp  command.hpp  flash.cpp  flash.hpp  main.cpp  ppg.cpp  ppg.hpp
